--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,5 @@
 rootProject.name = 'online-store'
+include 'applications/account-address'
+include 'applications/order-orderline'
+include 'applications/product'
+include 'applications/shipment'
