--- a/applications/account-address/src/main/resources/application.properties
+++ b/applications/account-address/src/main/resources/application.properties
@@ -6,14 +6,14 @@ spring.datasource.url=jdbc:mysql://localhost/onlineStore?useSSL=false&useUnicode
 spring.datasource.username=root
 spring.datasource.password=TombRaider2408$
 
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql=true
 spring.main.allow-bean-definition-overriding=true
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.hibernate.ddl-auto= create
+#spring.jpa.hibernate.ddl-auto= create
 
 ## ************** Spring Information ****************** ##
 
